--- a/contacto/index.html
+++ b/contacto/index.html
@@ -146,12 +146,11 @@
             <div class="mapBox" aria-label="Mapa"
               style="margin: 16px 0; border-radius: 8px; overflow: hidden; max-height: 140px;">
               <iframe title="Mapa Sazón con Limón" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
-                style="height: 140px;"
-                src="https://www.google.com/maps?q=San%20Francisco%201036,%20Puerto%20Varas&output=embed"></iframe>
+                style="height: 140px;" src="https://www.google.com/maps?cid=2610395615596546130&output=embed"></iframe>
             </div>
             <a class="btn btn--ghost btn--full" style="justify-content: center;"
-              href="https://www.google.com/maps/search/?api=1&query=San+Francisco+1036,+Puerto+Varas" target="_blank"
-              rel="noopener">
+              href="https://www.google.com/maps/place/Saz%C3%B3n+con+Lim%C3%B3n/@-41.3227187,-72.985567,822m/data=!3m2!1e3!4b1!4m6!3m5!1s0x96182793bbe8bc3b:0x2439fcfb5ede8852!8m2!3d-41.3227187!4d-72.985567!16s%2Fg%2F11y_fg4ghg?hl=en-GB&entry=ttu&g_ep=EgoyMDI2MDIyNC4wIKXMDSoASAFQAw%3D%3D"
+              target="_blank" rel="noopener">
               Ver en Google Maps
             </a>
           </article>
