--- a/crudos-puerto-varas/index.html
+++ b/crudos-puerto-varas/index.html
@@ -259,20 +259,19 @@
                     </p>
 
                     <a class="btn btn--ghost"
-                        href="https://www.google.com/maps/search/?api=1&query=San+Francisco+1036,+Puerto+Varas"
+                        href="https://www.google.com/maps/place/Saz%C3%B3n+con+Lim%C3%B3n/@-41.3227187,-72.985567,822m/data=!3m2!1e3!4b1!4m6!3m5!1s0x96182793bbe8bc3b:0x2439fcfb5ede8852!8m2!3d-41.3227187!4d-72.985567!16s%2Fg%2F11y_fg4ghg?hl=en-GB&entry=ttu&g_ep=EgoyMDI2MDIyNC4wIKXMDSoASAFQAw%3D%3D"
                         target="_blank" rel="noopener">
                         Ver ubicación en Google Maps
                     </a>
 
                     <div class="visit__note">
-                        <strong>Nota:</strong> Solo entrega y
-                        delivery, sin mesas.
+                        <strong>Recuerda:</strong> No hay consumo en el local. Solo retiro y entrega.
                     </div>
                 </div>
 
                 <div class="visit__map" aria-label="Mapa">
                     <iframe title="Mapa Sazón con Limón" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
-                        src="https://www.google.com/maps?q=San%20Francisco%201036,%20Puerto%20Varas&output=embed">
+                        src="https://www.google.com/maps?cid=2610395615596546130&output=embed">
                     </iframe>
                 </div>
             </div>
@@ -287,28 +286,27 @@
                 </div>
 
                 <div>
-                    <h4>Navegación</h4>
+                    <h4>Links</h4>
                     <ul class="footlinks">
-                        <li><a href="/">Volver al Inicio</a></li>
-                        <li><a href="/menu/">Nuestra Carta</a></li>
-                        <li><a href="/contacto/">Ubicación e Info</a></li>
+                        <li><a href="/">Inicio</a></li>
+                        <li><a href="/menu/">Menú</a></li>
+                        <li><a href="/contacto/">Contacto</a></li>
                     </ul>
                 </div>
 
                 <div>
-                    <h4>Hablemos</h4>
+                    <h4>Contacto</h4>
                     <ul class="footlinks">
-                        <li><a href="https://wa.me/56948552174" target="_blank" rel="noopener">💬 Charla por
-                                WhatsApp</a></li>
-                        <li><a href="tel:+56948552174">📞 Llámanos</a></li>
-                        <li><a href="https://www.instagram.com/sazonconlimon/" target="_blank" rel="noopener">📷 Mira
-                                nuestro Instagram</a></li>
+                        <li><a href="https://wa.me/56948552174" target="_blank" rel="noopener">💬 WhatsApp</a></li>
+                        <li><a href="tel:+56948552174">📞 Llamar</a></li>
+                        <li><a href="https://www.instagram.com/sazonconlimon/" target="_blank" rel="noopener">📷
+                                Instagram</a></li>
                     </ul>
                 </div>
             </div>
 
             <div class="wrap footer__bottom">
-                <small>© <span id="year"></span> Sazón con Limón | Sabores del Sur, Puerto Varas</small>
+                <small>© <span id="year"></span> Sazón con Limón · Puerto Varas</small>
                 <p class="developed-by">
                     Desarrollado y optimizado para posicionar en Google por
                     <a href="https://vertice.hogga.cl" target="_blank" rel="noopener noreferrer">
