--- a/menu/index.html
+++ b/menu/index.html
@@ -341,7 +341,7 @@
     </footer>
   </main>
 
-  <!-- Sticky WhatsApp Button -->
+  <!-- Boton WhatsApp -->
   <a href="https://wa.me/56948552174" class="sticky-wa js-sticky-wa" aria-label="Pedir por WhatsApp" target="_blank"
     rel="noopener">
     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="currentColor">
