--- a/ceviche-de-salmon-puerto-varas/index.html
+++ b/ceviche-de-salmon-puerto-varas/index.html
@@ -272,7 +272,7 @@
                     </p>
 
                     <a class="btn btn--ghost"
-                        href="https://www.google.com/maps/search/?api=1&query=San+Francisco+1036,+Puerto+Varas"
+                        href="https://www.google.com/maps/place/Saz%C3%B3n+con+Lim%C3%B3n/@-41.3227187,-72.985567,822m/data=!3m2!1e3!4b1!4m6!3m5!1s0x96182793bbe8bc3b:0x2439fcfb5ede8852!8m2!3d-41.3227187!4d-72.985567!16s%2Fg%2F11y_fg4ghg?hl=en-GB&entry=ttu&g_ep=EgoyMDI2MDIyNC4wIKXMDSoASAFQAw%3D%3D"
                         target="_blank" rel="noopener">
                         Cómo llegar
                     </a>
@@ -284,13 +284,12 @@
 
                 <div class="visit__map" aria-label="Mapa">
                     <iframe title="Mapa Sazón con Limón" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
-                        src="https://www.google.com/maps?q=San%20Francisco%201036,%20Puerto%20Varas&output=embed">
+                        src="https://www.google.com/maps?cid=2610395615596546130&output=embed">
                     </iframe>
                 </div>
             </div>
         </section>
 
-        <!-- Footer (reuse yours) -->
         <footer class="footer">
             <div class="wrap footer__grid">
                 <div class="footer__brand">
